//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  role Role [not null]
  subject UserSubject [not null]
  examination Examination [not null]
  invigilate Invigilate [not null]
  isEnabled Boolean [not null, default: true]
}

Table Invigilate {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
  examination Examination [not null]
  isEnabled Boolean [not null, default: true]
}

Table Examination {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  startAt DateTime
  submitAt DateTime
  status ExaminationStatus [not null]
  user User
  userId String
  Invigilate Invigilate
  invigilateId String
  isEnabled Boolean [not null, default: true]
  topic Topic
  topicId String
}

Table Topic {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  question Question [not null]
  examination Examination [not null]
  isEnabled Boolean [not null, default: true]
}

Table Question {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  topic Topic
  topicId String
  answers Answer [not null]
  subject Subject
  subjectId String
  isEnabled Boolean [not null, default: true]
}

Table UserSubject {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  isEnabled Boolean [not null, default: true]
  subject Subject
  subjectId String
  user User
  userId String

  indexes {
    (userId, subjectId) [unique]
  }
}

Table Subject {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  question Question [not null]
  user UserSubject [not null]
  isEnabled Boolean [not null, default: true]
}

Table Answer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  isCorrect Boolean [not null]
  question Question
  questionId String
  isEnabled Boolean [not null, default: true]
}

Enum Role {
  ADMIN
  MANAGER
  LECTURER
  STUDENT
}

Enum ExaminationStatus {
  NOT_STARTED
  PREPARING
  IN_PROGRESS
  PASS
  FAIL
}

Ref: Invigilate.userId > User.id

Ref: Examination.userId > User.id

Ref: Examination.invigilateId > Invigilate.id

Ref: Examination.topicId > Topic.id

Ref: Question.topicId > Topic.id

Ref: Question.subjectId > Subject.id

Ref: UserSubject.subjectId > Subject.id

Ref: UserSubject.userId > User.id

Ref: Answer.questionId > Question.id